# cch

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: audit.yml  deploy.yml  rust.yml
docs/challenges/: README.md  day11.md  day4.md  day7.md  day8.md  day_05.md  day_06.md  day_12.md  day_13.md  day_14.md  day_15.md  day_18.md  day_19.md  day_20.md  day_21.md  day_22.md
src/: lib.rs  main.rs  routes.rs  routing.rs  startup.rs
src/challenges/: day1.rs  day4.rs  day6.rs  day7.rs  day8.rs  day_07.rs  day_08.rs  day_11.rs  day_12.rs  mod.rs  warmup.rs
tests/: health_check.rs
tests/api/: day1.md  day1.rs  day11.rs  day4.rs  day6.rs  day7.rs  day8.rs  day_01.rs  day_04.rs  day_06.rs  day_12.rs  fake_error.rs  health_check.rs  helpers.rs  main.rs  root.rs  warmup.md  warmup.rs
