[package]
name = "cch"
version = "2023.12.28-1"
authors = ["Francisco Nevitt Gonçalves <github.com/fng97>"]
edition = "2021"

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6.2"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.35.1"
futures-util = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
base64 = "0.21.7"
serde_json = "1.0.113"
reqwest = "0.11.24"
