[package]
name = "cch"
version = "2024.5.7-1"
authors = ["Francisco Nevitt Gonçalves <github.com/fng97>"]
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.5"
shuttle-actix-web = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.37.0"
futures-util = "0.3.30"
serde = { version = "1.0.201", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.117"
reqwest = "0.12.5"
